--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Klinsmann Lopes",
   "license": "ISC",
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "marko": "4.13.1"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
